--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ h1{
 }
 
 button{
-    width:20vw
+    width:20vw;
+    margin:0.5rem;
+    padding:0.5rem;
+    border:2px solid black;
+    border-radius:5%;
+    font-size: 1.5rem;
+}
+
+.game{
+    display: none;
 }
 
