--- a/style.css
+++ b/style.css
@@ -68,13 +68,16 @@ h1{
 }
 
 .menu{
-    margin-top: 2rem;
+    margin-top: 1rem;
+    width:5rem;
+    height:5rem;
     border:2px solid black;
 }
 
 button{
     width:20vw;
     margin:0.5rem;
+    margin-bottom: 0rem;
     padding:0.5rem;
     border:2px solid black;
     border-radius:5%;
@@ -82,6 +85,10 @@ button{
 }
 
 .game{
+    display: none;
+}
+
+.exit{
     display: none;
 }
 
