--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1{
     justify-content: center;
     align-items: center;
     margin:0 auto;
-    background-color: chocolate;
+    background-color: rgb(152, 152, 152);
     padding: 5px;
     border-radius:2.5%;
     /* display: none; */
@@ -72,6 +72,10 @@ h1{
     width:5rem;
     height:5rem;
     border:2px solid black;
+    background-color: yellow;
+    position:absolute;
+    top :0;
+    right:5rem;
 }
 
 button{
@@ -103,5 +107,10 @@ button{
     height: 40px;
     width: 40px;
     margin:1rem
+}
+
+.message{
+    font-size: 50px;
+
 }
 
