--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +18,6 @@ h1{
     background-color: rgb(152, 152, 152);
     padding: 5px;
     border-radius:2.5%;
-    /* display: none; */
 }
 
 .row{
@@ -26,8 +25,7 @@ h1{
 }
 
 .cell{
-    /* margin:2rem; */
-    /* font-size: 4rem; */
+
     background-color: aqua;
     border:2px solid black;
     border-radius:5%;
@@ -45,14 +43,7 @@ h1{
     vertical-align: middle;
 }
 
-.cell p{
 
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
-}
 
 .message{
     margin:2rem;
@@ -113,4 +104,90 @@ button{
     font-size: 50px;
 
 }
+ */
 
+ body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    height: 100vh;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+}
+
+.board {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-gap: 5px;
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.cell {
+    background-color: #f0f0f0;
+    border: 2px solid #cccccc;
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.cell:hover {
+    background-color: #e0e0e0;
+}
+
+.message {
+    margin: 20px;
+    padding: 10px;
+    border: 2px solid #333333;
+    text-align: center;
+    background-color: #ffffcc;
+    font-size: 1.5em;
+}
+
+.menu {
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: 2px solid #333333;
+    background-color: #ffff00;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.menu:hover {
+    background-color: #ffcc00;
+}
+
+button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: 2px solid #333333;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #f0f0f0;
+}
+
+.select {
+    margin: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.select input {
+    height: 40px;
+    width: 40px;
+    margin-right: 10px;
+}
