--- a/style.css
+++ b/style.css
@@ -1,113 +1,28 @@
-/* body{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+ @font-face {
+    font-family: 'digitalism';
+    src: url('/fonts/digitalism.ttf');
+    font-weight: normal;
+    font-style: normal;
 }
 
-h1{
-    margin: 0 auto;
-}
-
-.board{
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: center;
-    align-items: center;
-    margin:0 auto;
-    background-color: rgb(152, 152, 152);
-    padding: 5px;
-    border-radius:2.5%;
-}
-
-.row{
-    display:flex;
-}
-
-.cell{
-
-    background-color: aqua;
-    border:2px solid black;
-    border-radius:5%;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding:0;
-    position:relative;
-    font-size: 80px;
-    text-align: center;
-    margin:0 auto;
-    padding:0;
-    vertical-align: middle;
-}
-
-
-
-.message{
-    margin:2rem;
-    width:50vw;
-    padding:0.5rem;
-    border: 2px solid black;
-    text-align: center;
-    background-color: rgb(255, 252, 170);
-}
-
-.play-mode{
-    margin:1rem;
-}
-
-.menu{
-    margin-top: 1rem;
-    width:5rem;
-    height:5rem;
-    border:2px solid black;
-    background-color: yellow;
-    position:absolute;
-    top :0;
-    right:5rem;
-}
-
-button{
-    width:20vw;
-    margin:0.5rem;
-    margin-bottom: 0rem;
-    padding:0.5rem;
-    border:2px solid black;
-    border-radius:5%;
-    font-size: 1.5rem;
+@font-face {
+    font-family: 'arcade';
+    src: url('/fonts/arcade.regular.ttf');
+    font-weight: normal;
+    font-style: normal;
 }
 
 .game{
     display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
-.exit{
-    display: none;
-}
-
-.select{
-    margin:2rem;
-    display:flex;
-    align-items:center;
-    
-}
-
-.select input{
-    height: 40px;
-    width: 40px;
-    margin:1rem
-}
-
-.message{
-    font-size: 50px;
-
-}
- */
-
- .game{
-    display: none;
+@media only screen and (max-width: 600px) {
+    .game{
+        flex-direction: column;
+    }
 }
 
 .exit{
@@ -120,9 +35,23 @@ button{
     justify-content: center;
     align-items: center;
     margin: 0;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    /* height: 100vh; */
+    /* font-family: Arial, sans-serif; */
+    /* font-family: 'digitalism'; */
+    font-family: 'arcade';
+    /* background-color: #303030; */
+    background-image: linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
+      linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%); 
+  background-position: 0 0, 30px 30px;
+  background-size: 60px 60px;
+  background-color: #363636;  
+    color:#ffffff
+}
+
+h1{
+    font-size: 4em;
+    text-align: center;
+    margin: 0;
 }
 
 .board {
@@ -132,6 +61,7 @@ button{
     background-color: #ffffff;
     padding: 10px;
     border-radius: 10px;
+    color:#000
 }
 
 .cell {
@@ -143,7 +73,8 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2em;
+    text-align: center;
+    font-size: 3em;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -155,10 +86,12 @@ button{
 .message {
     margin: 20px;
     padding: 10px;
-    border: 2px solid #333333;
+    border: 2px solid #ffffff;
     text-align: center;
-    background-color: #ffffcc;
+    background-color: #000000;
     font-size: 1.5em;
+    color:greenyellow
+    /* font-family:'digitalism' */
 }
 
 .menu {
@@ -183,6 +116,7 @@ button {
     border: 2px solid #333333;
     border-radius: 5px;
     font-size: 1em;
+    font-family: 'arcade';
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -204,7 +138,7 @@ button:hover {
 }
 
 .select {
-    margin: 20px;
+    margin: 0.5rem;
     display: flex;
     align-items: center;
 }
@@ -231,8 +165,8 @@ button:hover {
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
+    grid-template-columns: 1 1;
+    /* justify-content: center; */
     align-items: center;
     /* background-color: #2196F3; */
     padding: 10px;
@@ -241,4 +175,20 @@ button:hover {
 
   .select p {
     font-size: 2rem; /* Adjust the font size here */
+    margin:0;
 }
+
+.gameinfo{
+    margin-left:2rem;
+    color:#000
+}
+
+@media only screen and (max-width: 600px) {
+    .gameinfo{
+        margin:0;
+    }
+}
+
+
+
+
