--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     /* height: 100vh; */
     /* font-family: Arial, sans-serif; */
     /* font-family: 'digitalism'; */
-    font-family: 'arcade';
+    font-family: arcade;
     /* background-color: #303030; */
     background-image: linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%),
         linear-gradient(45deg, #000 25%, transparent 25%, transparent 75%, #000 75%);
